Fix overlapping text
Fixes overlapping text/links in the screenshot history view.

--- a/app/static/css/preferences.css
+++ b/app/static/css/preferences.css
@@ -384,7 +384,9 @@ input:checked+.slider:before {
   margin: 0;
   padding: 0;
   height: 300px;
-  overflow: auto;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding-top: 14px;
 }
 
@@ -401,7 +403,7 @@ span.helper {
   vertical-align: middle;
   padding: 4px;
   padding-left: 0px;
-  width: 300px;
+  width: 800px;
   padding-bottom: 16px;
   margin-bottom: 8px;
   border-bottom: 1px solid #444;
